# rust-rocket-svelte

./: .gitignore  Cargo.toml  README.md  package.json  rollup.config.js
client/: App.svelte
client/Admin/: Admin.svelte  DiskSpace.svelte  Journal.svelte  Status.svelte
client/Devices/: DeviceTable.svelte  Devices.svelte
client/Help/: DiskSpace.svelte  Help.svelte  Status.svelte
client/Server/: Request.svelte
public/: svelte-material-ui-bare.css
src/: http_server.rs  main.rs
src/cli/: cli.rs  mod.rs
src/console/: commands.rs  error.rs  logging.rs  mod.rs  requests.rs  responses.rs  routes.rs
src/db/: db.rs  error.rs  mod.rs
src/foobar/: commands.rs  error.rs  foobar.rs  mod.rs  routes.rs
src/rest/: mod.rs  rest.rs
