[package]
name = "rust-rocket-svelte"
version = "0.0.1"
authors = ["Joe Mooney <joe.mooney@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
gethostname = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
okapi = "0.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rocket = "0.4"
rocket_contrib = {version = "0.4.10", features = ["json"] }
rocket_okapi = "0.5.1"
schemars = "0.7.6"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
structopt = "0.3.23"
thiserror = "1.0.29"
